--- a/index.html
+++ b/index.html
@@ -66,31 +66,7 @@
 
     </header>
 
-    <!-- <section>
-
-        <div class="owl-carousel">
-
-            <div>
-
-                <h1>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius doloremque vitae alias deleniti ea, nemo dolorem laborum eveniet possimus tempore natus sequi sit, magnam expedita obcaecati est sunt adipisci! Incidunt?
-                </h1>
-
-            </div>
-
-            <div>
-
-                <h1>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius doloremque vitae alias deleniti ea, nemo dolorem laborum eveniet
-                </h1>
-
-            </div>
-
-        </div>
-
-    </section> -->
-
-    <div class="section-top">
+    <section class="section-top">
 
         <div class="container">
             <div class="row">
@@ -160,9 +136,139 @@
                 </div>
 
             </div>
+
         </div>
 
-    </div>
+    </section>
+
+    <section class="section-one">
+
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-8 offset-lg-2">
+                    <h2>Займы для бизнеса. Просто и быстро - все онлайн!</h2>
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+
+                        <div class="loans-for-business">
+                            <div class="loans-for-business-ico">
+                                <div class="loans-for-business-img">
+                                    <img src="img/icons/startup.png" alt="Иконка">
+                                </div>
+                            </div>
+                            <h5>Скорость решения</h5>
+                            <p>Предварительное решение от 10 минут. Рассмотрение и выдача онлайн.</p>
+                        </div>
+
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+
+                        <div class="loans-for-business">
+                            <div class="loans-for-business-ico">
+                                <div class="loans-for-business-img">
+                                    <img src="img/icons/time.png" alt="Часы">
+                                </div>
+                            </div>
+                            <h5>Быстрое оформление</h5>
+                            <p>Быстрое решение после предоставления минимального пакета документов.</p>
+                        </div>
+
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+
+                        <div class="loans-for-business">
+                            <div class="loans-for-business-ico">
+                                <div class="loans-for-business-img">
+                                    <img src="img/icons/money-bag.png" alt="Мешок денег">
+                                </div>
+                            </div>
+                            <h5>Моментальные деньги</h5>
+                            <p>Деньги поступают на ваш расчетный счет от 2-х часов после подписания документов.</p>
+                        </div>
+
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+
+                        <div class="loans-for-business">
+                            <div class="loans-for-business-ico">
+                                <div class="loans-for-business-img">
+                                    <img src="img/icons/like.png" alt="Иконка">
+                                </div>
+                            </div>
+                            <h5>Надежный партнер</h5>
+                            <p>Привлекли финансирование для компания по всей РФ на сумму свыше 700 млн. руб.</p>
+                        </div>
+
+                </div>
+
+
+            </div>
+        </div>
+
+    </section>
+
+    <section class="section-two">
+
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-8 offset-lg-2">
+                    <h2>Цели финансирования</h2>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+
+                    <div class="financing-objectives">
+                        <h4 class="h4-bottom-line">На исполнение</h4>
+                        <p>Займы на исполнение контрактов по 44-ФЗ, 223-ФЗ, коммерческие контракты</p>
+                        <button type="button" class="btn btn-bg-transparent w-100">Подробнее</button>
+                        <button type="button" class="btn btn-bg-pink w-100">Оставить заявку</button>
+                    </div>
+
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+
+                    <div class="financing-objectives">
+                        <h4 class="h4-bottom-line">Торговый</h4>
+                        <p>Для производителей и поставщиков. Исполнение обязательств по контрактам и договорам</p>
+                        <button type="button" class="btn btn-bg-transparent w-100">Подробнее</button>
+                        <button type="button" class="btn btn-bg-pink w-100">Оставить заявку</button>
+                    </div>
+
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+
+                    <div class="financing-objectives">
+                        <h4 class="h4-bottom-line">Оборотный. Любые цели</h4>
+                        <p>Пополнение оборотных средств на цели развития компании.</p>
+                        <button type="button" class="btn btn-bg-transparent w-100">Подробнее</button>
+                        <button type="button" class="btn btn-bg-pink w-100">Оставить заявку</button>
+                    </div>
+
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+
+                    <div class="financing-objectives">
+                        <h4 class="h4-bottom-line">Займы на участие</h4>
+                        <p>Тендерный заём на участие компании в тендерах по 44-ФЗ или 223-ФЗ</p>
+                        <button type="button" class="btn btn-bg-transparent w-100">Подробнее</button>
+                        <button type="button" class="btn btn-bg-pink w-100">Оставить заявку</button>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+    </section>
 
     <div class="content">
         <section id="section-1">
