--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>ФИЗЗА</title>
+	<title>FIZZA.RU - Деньги для бизнеса</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -269,6 +269,109 @@
         </div>
 
     </section>
+
+    <section class="section-three">
+
+        <div class="container-fluid">
+            <div class="row">
+
+                <div class="col-lg-6">
+
+
+
+                    <div class="benefits">
+                        <h2>Преимущества</h2>
+                        <h3>Выгодно!</h3>
+                        <p><span class="benefits-text-accent">Сроки от 1 до 6 месяцев</span> с возможностью пролонгации</p>
+                        <p><span class="benefits-text-accent">Займы для бизнеса с минимальной переплатой.</span> Займы на участие в тендере и на исполнение госконтакта, закрыть временный кассовый разрыв, пополнение оборотных средств, покупка основных средств,на иные цели.</p>
+                        <p><span class="benefits-text-accent">Ставка от 2% в месяц.</span> Досрочное погашение без штрафов с пересчетом процентов в вашу пользу.</p>
+                        <p><span class="benefits-text-accent">Сумма займа от 1 до 30 млн.</span></p>
+                        <p>Улучшите условия будущих займов. Нет просрочек в платежах? Сервис будет заинтересован увеличить сумму и срок, а также снизить процентную ставку.</p>
+                    </div>
+
+                </div>
+
+                <div class="col-lg-6">
+                    <img class="img-responsive" src="img/21.png" alt="Выгодно">
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
+    <section class="section-four">
+
+        <div class="container-fluid">
+            <div class="row">
+
+                <div class="col-lg-6">
+                    <img class="img-responsive" src="img/22.png" alt="Быстро">
+                </div>
+
+
+                <div class="col-lg-6">
+
+                    <div class="benefits">
+                        <h3>Быстро!</h3>
+                        <span class="benefits-text-accent">Займы бизнесу онлайн без банков</span>
+                        <p>Сервис финансивароняи бизнеса. Инвесторы и партнеры выдают займы юридическим лицам и индивидуальным предпринимателям – представителям малого и среднего бизнеса. Без банков, быстро и легко!.</p>
+                        <span class="benefits-text-accent">Решение по займу через от 15 минут</span>
+                        <p>Банки требуют залог, закрывая глаза на целые отрасли, используя устаревшие методы оценки компаний. Сервис в свою очередь, имеет более быстрый и технологичный подход. Решение по вашему займу занимает всего от 15 минут.</p>
+                        <span class="benefits-text-accent">Деньги на вашем счете от 1 дня</span>
+                        <p>Минимальный срок получения денег – 1 день. От 60 минут на проверку заявки. От 1 дня на подготовку сделки и перевод средств вам на расчетный счет.</p>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="section-five">
+
+            <div class="container-fluid">
+                    <div class="row">
+
+                        <div class="col-lg-6">
+
+                            <div class="benefits">
+                                <h3>Легко! Онлайн!</h3>
+                                <span class="benefits-text-accent">Займы без залога до 30 млн рублей!</span>
+                                <p>Нет банковских сложностей: займы без залога,  всё онлайн по всей РФ</p>
+                                <span class="benefits-text-accent">Без посещения, оформление online</span>
+                                <p>Не нужно собирать документы, не нужен залог, никуда не нужно ездить и всё через интернет.</p>
+                                <span class="benefits-text-accent">Деньги на счете от 1 дня</span>
+                                <p>Компания заключает договор займа в электронном виде с инвестором или партнером сервиса. Мы подготавливаем документы для быстрого онлайн подписания займа.  В каждый договор мы автоматически подставляет реквизиты сторон и условия займа. Поэтому процедура подписания пакета договоров проходит для компании оптимально быстро и без лишних хлопот.</p>
+                            </div>
+
+                        </div>
+
+                        <div class="col-lg-6">
+                            <img class="img-responsive" src="img/23.png" alt="Выгодно">
+                        </div>
+
+                    </div>
+                </div>
+
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div class="content">
         <section id="section-1">
