--- a/index.html
+++ b/index.html
@@ -44,13 +44,18 @@
                             <button type="button" class="btn btn-nav-phone">
                                 <img src="img/icons/phone.png" alt="Телефон">
                             </button>
-                            <button type="button" class="btn btn-nav-lk">
+                            <button type="button" class="btn btn-nav-lk d-none d-lg-none d-xl-inline">
                                 <img src="img/icons/user.png" alt="Телефон">
                                 Личный кабинет</button>
+                            <button type="button" class="btn btn-nav-lk-mobile d-inline d-lg-inline d-xl-none">
+                                <img src="img/icons/user.png" alt="Телефон">
+                            </button>
                         </form>
                     </div>
 
-                    <div class="mobile-menu-button"><i class="fa fa-bars" aria-hidden="true"></i> Меню</div>
+                    <div class="mobile-menu-button btn btn-nav-menu">
+                        <img src="img/icons/_ionicons_svg_md-menu.svg" alt="Телефон">
+                    </div>
                     <nav id="navigation-menu" class="main-menu top-menu">
                         <ul>
                             <li><a href="#section-1" rel="m_PageScroll2id">Займы бизнесу</a></li>
@@ -70,7 +75,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-7">
+                <div class="col-xl-7 col-lg-9 col-md-12">
                     <div class="baner">
                         <h1>
                             <span class="money">Деньги</span> для бизнеса</span> <br>
@@ -124,14 +129,14 @@
                     </div>
                 </div>
 
-                <div class="col-3">
+                <div class="col-xl-5 col-lg-3 col-md-12">
                     <div class="baner-img">
-                        <img src="img/icons/7-layers.png" alt="Как это работает">
+                        <img class="img-responsive d-none d-lg-block" src="img/icons/7-layers.png" alt="Как это работает">
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="baner-img-scrol-maus">
-                        <img src="img/icons/5-layers.png" alt="Как это работает">
+                        <img class="d-none d-lg-block" src="img/icons/5-layers.png" alt="Как это работает">
                     </div>
                 </div>
 
@@ -275,12 +280,16 @@
         <div class="container-fluid">
             <div class="row">
 
-                <div class="col-lg-6">
+                <div class="col-12 d-block d-md-none mb-3">
+                    <h2 class="text-center">Преимущества</h2>
+                </div>
+
+                <div class="col-lg-6 col-md-6 order-2 order-md-2 order-lg-1">
 
 
 
                     <div class="benefits">
-                        <h2>Преимущества</h2>
+                        <h2 class="d-none d-md-block">Преимущества</h2>
                         <h3>Выгодно!</h3>
                         <p><span class="benefits-text-accent">Сроки от 1 до 6 месяцев</span> с возможностью пролонгации</p>
                         <p><span class="benefits-text-accent">Займы для бизнеса с минимальной переплатой.</span> Займы на участие в тендере и на исполнение госконтакта, закрыть временный кассовый разрыв, пополнение оборотных средств, покупка основных средств,на иные цели.</p>
@@ -291,7 +300,7 @@
 
                 </div>
 
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6 order-1 order-md-1 order-md-2">
                     <img class="img-responsive" src="img/21.png" alt="Выгодно">
                 </div>
 
@@ -333,7 +342,7 @@
             <div class="container-fluid">
                     <div class="row">
 
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 col-md-6 order-2 order-md-2 order-lg-1">
 
                             <div class="benefits">
                                 <h3>Легко! Онлайн!</h3>
@@ -347,7 +356,7 @@
 
                         </div>
 
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 col-md-6 order-1 order-md-1 order-md-2">
                             <img class="img-responsive" src="img/23.png" alt="Выгодно">
                         </div>
 
