--- a/dop.html
+++ b/dop.html
@@ -34,7 +34,7 @@
     <header class="">
 
         <div class="container top-line">
-            <a href="/" class="logo">
+            <a href="https://maxmytime.github.io/fizzza.github.io/index.html" class="logo">
                 <span class="logo-my">
                     <img class="img-responsive" src="img/logo3.svg" alt="Логотип">
                 </span>
